# generic-server-langgraph

./: CHANGELOG.md  README.md  pr_description.md  pyproject.toml
.claude/: settings.local.json
specs/: 01-fastapi-server-plan.md  01-fastapi-server.md  02-runnable-support-plan.md  02-runnable-support.md
src/langgraph_runnable_server/: __init__.py  _prefix.py  app.py  logging.py  runnable_app.py
src/langgraph_runnable_server/api/routes/: health.py  metrics.py
src/langgraph_runnable_server/metrics/: families.py  registry.py
tests/integration/: test_api_fake_list_llm_chain.py
tests/interface/: runnable_stubs.py  test_acceptance.py  test_health_and_metrics.py  test_import.py  test_methods.py  test_namespace_validation.py  test_runnable_acceptance.py  test_runnable_cancellation.py  test_runnable_errors.py  test_runnable_factory.py  test_runnable_factory_http.py  test_runnable_logging.py  test_runnable_methods.py  test_runnable_metrics.py  test_runnable_routes.py  test_runnable_validation.py
tests/unit/: stub_runnable.py  test_create_app_factory.py  test_create_runnable_app_validation.py  test_import.py  test_metrics_namespace_validation.py
