[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-runnable-server"
version = "0.1.0"
description = "Minimal FastAPI library exposing health and metrics under a configurable base path, plus a factory for a future runnable HTTP surface (invoke/batch). See specs/01-fastapi-server.md and specs/02-runnable-support.md."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "langchain-core>=1.3.0",
    "prometheus-client>=0.21.0",
    "starlette>=1.0.0",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "ty>=0.0.35",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
langgraph_runnable_server = ["py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]
